# zedit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
src/: zcmd.cpp  zdict.gen.cpp  zdict.h  zdict.re2c  zedit.cpp  zedit.h
src/ncurses/: terminal.cpp
src/win32/: terminal.cpp
